test/good/automatic/base/without_input/ret_zero/0041.lat
// official test 20
int main() {
    p();
    printInt(1);
    return 0;
}

void p() {}
