test/bad/automatic/base/compile_time/0015.lat
int main() {
	printInt("foo");
	return 0 ;
}
